--- a/P2I/mystyle.css
+++ b/P2I/mystyle.css
@@ -47,3 +47,10 @@ header a {
     font-size: 24px; 
     margin-bottom: 10px; 
 }
+
+/* Liste */
+
+.small-image {
+    width: 20px; /* Définissez la largeur souhaitée */
+    height: auto; /* Pour maintenir le rapport hauteur-largeur */
+}
